Enhance project setup with environment variables, password management scripts, and deployment guides

--- a/attendance_backend/.env
+++ b/attendance_backend/.env
@@ -1,1 +1,5 @@
-DB_URL=postgresql://postgres:achyut@localhost:5432/attendance
+# Neon PostgreSQL Database URL
+DB_URL=postgresql://neondb_owner:npg_MRIWLEaG3ek1@ep-quiet-meadow-a43qiwpc-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# JWT Secret Key for authentication (change this in production!)
+SECRET_KEY=hISWjvtk4MWkpzhQ8bIs5nNl4z9habXEyR3NXmKXnAQ
